src/core-crm/objects/Contextual_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Account Object to capture where an Organisation is playing a role in the business process.

Note that a Contextual Role record can ONLY be about a Contact OR about an Account. No record should ever have both Contact__c and Organisation_Account_Id__c populated on the same row.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>