src/core-crm/objects/Contextual_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Contact Object to capture an Organisation playing a role in the business process.

Note that a Contextual Role record can ONLY be about a Contact OR about an Account. No record should ever have both Contact_Id__c and Organisation_Account_Id__c populated on the same row.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>