src/core-crm/objects/Contextual_Role__c/fields/Contact_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_MobilePhone__c</fullName>
    <description>Where the Contextual Role record is capturing a data about a DEP Contact, the Contact’s Mobile Phone number needs to be displayed.</description>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Phone</label>
    <type>Text</type>
</CustomField>