src/core-crm/objects/Contextual_Role__c/fields/Contact_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Organisation or University Department Account record that the Contact has a relationship with, within the context of the business process.</description>
    <label>Contact Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contextual Roles (Contact Related Account)</relationshipLabel>
    <relationshipName>Contextual_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>