src/core-crm/objects/Contextual_Role__c/fields/Contact_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Work_Email__c</fullName>
    <description>Where the Contextual Role record is capturing a data about a DEP Contact, the Contact’s Work Email address needs to be displayed.</description>
    <formula>Contact__r.Work_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Work Email</label>
    <type>Text</type>
</CustomField>