src/core-crm/objects/Contextual_Role__c/fields/Contextual_Role__c.field-meta.xml
<CustomField>
    <fullName>Contextual_Role__c</fullName>
    <description>The role the participant is playing in the context of the business process.</description>
    <label>Contextual Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contextual_Role_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Board Chairman</fullName>
            </value>
            <value>
                <fullName>Board Vice-Chairman</fullName>
            </value>
            <value>
                <fullName>Chief Investigator</fullName>
            </value>
            <value>
                <fullName>Co-Investigator</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Funding Body</fullName>
            </value>
            <value>
                <fullName>Inventor</fullName>
            </value>
            <value>
                <fullName>Lead Researcher</fullName>
            </value>
            <value>
                <fullName>Lead Trainer</fullName>
            </value>
            <value>
                <fullName>ORS Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Contact</fullName>
            </value>
            <value>
                <fullName>Primary Partner Contact</fullName>
            </value>
            <value>
                <fullName>Public Officer</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Research Centre</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Secondary Investigator</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Training Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>