src/core-crm/objects/Contextual_Role__c/fields/Contextual_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Contextual_Role_Description__c</fullName>
    <description>Allows users to add some extra information about the participants role to be captured/stored.</description>
    <label>Contextual Role Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>