src/core-crm/objects/Contextual_Role__c/fields/Contextual_Role_Group__c.field-meta.xml
<CustomField>
    <fullName>Contextual_Role_Group__c</fullName>
    <description>Allows users to assign each Contextual Role record to a business defined group. This supports UI display requirements.</description>
    <label>Contextual Role Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Team</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Contributors</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Funding Bodies</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Public Officers</fullName>
            </value>
            <value>
                <fullName>Research Centre</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Training Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>