src/core-crm/objects/Contextual_Role__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Engagement Object.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>