src/core-crm/objects/Contextual_Role__c/fields/IP_Management__c.field-meta.xml
<CustomField>
    <fullName>IP_Management__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Provides a lookup to the IP Management Object.</description>
    <label>IP Management</label>
    <referenceTo>IP_Management__c</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>