src/core-crm/objects/Contextual_Role__c/fields/Is_QUT_Internal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Is_QUT_Internal_Participant__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the participant is QUT internal staff member or from outside QUT.</description>
    <label>Is QUT Internal Participant</label>
    <type>Checkbox</type>
</CustomField>