src/core-crm/objects/Contextual_Role__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Provides a lookup to the Opportunity Object.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>