src/core-crm/objects/Contextual_Role__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Provides a lookup to the Opportunity Outcome Object.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>Contextual Roles</relationshipLabel>
    <relationshipName>Contextual_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>