src/core-crm/objects/Contextual_Role__c/fields/Role_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Role_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if a participant is currently playing the specified role in the business process.</description>
    <label>Role Is Active</label>
    <type>Checkbox</type>
</CustomField>