src/core-crm/objects/Contextual_Role__c/fields/Role_Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Role_Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that the role the person is playing has been approved by an authorized QUT staff. Usually only applies to research staff being approved to participate in a Research Project.</description>
    <label>Role is Approved</label>
    <type>Checkbox</type>
</CustomField>