src/core-crm/objects/Contextual_Role__c/recordTypes/Advancement_Opportunity_Role.recordType-meta.xml
<RecordType>
    <fullName>Advancement_Opportunity_Role</fullName>
    <active>true</active>
    <description>Create a participant’s role in an Advancement Opportunity.</description>
    <label>Advancement Opportunity Role</label>
</RecordType>