src/core-crm/objects/Contextual_Role__c/recordTypes/Engagement_Role.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Role</fullName>
    <active>true</active>
    <description>Create a participant’s role in an Engagement.</description>
    <label>Engagement Role</label>
</RecordType>