src/core-crm/objects/Contextual_Role__c/recordTypes/IP_Management_Role.recordType-meta.xml
<RecordType>
    <fullName>IP_Management_Role</fullName>
    <active>true</active>
    <description>Create a participant’s role in an IP Management process.</description>
    <label>IP Management Role</label>
</RecordType>