src/core-crm/objects/Contextual_Role__c/recordTypes/Opportunity_Outcome_Role.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Outcome_Role</fullName>
    <active>true</active>
    <description>Create a participant’s role in an Opportunity Outcome.</description>
    <label>Opportunity Outcome Role</label>
</RecordType>