src/core-crm/objects/Contextual_Role__c/recordTypes/Opportunity_Role.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Role</fullName>
    <active>true</active>
    <description>Create a participant’s role in an Opportunity.</description>
    <label>Opportunity Role</label>
</RecordType>