src/core-crm/objects/Contextual_Role__c/validationRules/Account_or_Contact_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Contact_is_Required</fullName>
    <active>true</active>
    <description>Ensures that Account or Contact is populated for this role.</description>
    <errorConditionFormula>AND (
ISBLANK(Account__c),
ISBLANK(Contact__c)
)</errorConditionFormula>
    <errorMessage>Please ensure Account or Contact is populated for this role.</errorMessage>
</ValidationRule>