src/core-crm/objects/Contextual_Role__c/validationRules/Engagement_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_is_Required</fullName>
    <active>true</active>
    <description>Ensures that engagement is populated if record type is Engagement Role.</description>
    <errorConditionFormula>AND (
        RecordType.DeveloperName = &apos;Engagement_Role&apos;,
        ISBLANK(Engagement__c)
        )</errorConditionFormula>
    <errorDisplayField>Engagement__c</errorDisplayField>
    <errorMessage>Please ensure engagement is populated if record type is Engagement Role.</errorMessage>
</ValidationRule>