src/core-crm/objects/Contextual_Role__c/validationRules/Opportunity_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_is_Required</fullName>
    <active>true</active>
    <description>Ensures that Opportunity is populated if record type is Opportunity Role.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Opportunity_Role&apos;,
ISBLANK(Opportunity__c)
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Please ensure Opportunity is populated if record type is Opportunity Role.</errorMessage>
</ValidationRule>