src/core-crm/objects/Contextual_Role__c/validationRules/Opportunity_Outcome_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Outcome_is_Required</fullName>
    <active>true</active>
    <description>Ensure that Opportunity Outcome is populated if record type is Opportunity Outcome Role.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Opportunity_Outcome_Role&apos;,
ISBLANK(Opportunity_Outcome__c)
)</errorConditionFormula>
    <errorDisplayField>Opportunity_Outcome__c</errorDisplayField>
    <errorMessage>Please ensure Opportunity Outcome is populated if record type is Opportunity Outcome Role.</errorMessage>
</ValidationRule>